// Copyright (c) 2026 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.protocol.v30;

import "com/digitalasset/canton/crypto/v30/crypto.proto";
import "scalapb/scalapb.proto";

// A commitment to the active contract set (ACS) that is shared between two participants on a given synchronizer at a given time.
// Given a commitment scheme to the ACS, the semantics are as follows: the sender declares that the shared ACS was
// exactly the one committed to, at every commitment tick during the specified period and as determined by the period's
// interval. The interval is assumed to be a round number of seconds. The ticks then start at the Java EPOCH time, and
// are exactly `interval` apart.
// All fields are mandatory.
message AcsCommitment {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";
  string physical_synchronizer_id = 1;
  string sending_participant_uid = 2;
  string counter_participant_uid = 3;
  int64 from_exclusive = 4; // in microseconds of UTC time since Unix epoch
  int64 to_inclusive = 5; // in microseconds of UTC time since Unix epoch
  bytes commitment = 6;
}

// Represents a protocol message containing an ACS commitment along with its associated signatures.
message AcsCommitmentProtocolMessage {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  bytes acs_commitment = 1;
  repeated com.digitalasset.canton.crypto.v30.Signature signatures = 2;
}
